Fix alignements

--- a/public/stylesheets/highscores.css
+++ b/public/stylesheets/highscores.css
@@ -53,7 +53,7 @@
 }
 
 .winnerInfo{
-  width: 25%;
+  width: 30%;
   text-align: left;
 }
 
@@ -125,8 +125,8 @@
 
 
 .sponsor img {
-    max-height: 2vw;
-    padding: 3% 0;
+    max-height: 1.52vw;
+    padding: 2% 0 0;
 }
 
 .sponsor {
